cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage BM_serial.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(DisplayImage PUBLIC OpenMP::OpenMP_CXX)
endif()